<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/info"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/textInfo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/emailEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

    <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/textInfo"
            app:layout_constraintBottom_toTopOf="@id/passEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
            android:id="@+id/errorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/invalidemail"
            android:textColor="@color/dark_red"
            app:layout_constraintStart_toStartOf="@id/emailEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@id/emailEditText"
            app:layout_constraintBottom_toTopOf="@id/numberEditText"
            app:layout_constraintTop_toBottomOf="@id/errorEmail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView
            android:id="@+id/errorPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/invalidpassword"
            android:textColor="@color/dark_red"
            app:layout_constraintStart_toStartOf="@id/emailEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passEditText"
            app:layout_constraintLeft_toLeftOf="parent"/>


    <EditText
            android:id="@+id/numberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/number"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@id/emailEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passEditText"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/errorNr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/invalid_phone_number"
            android:textColor="@color/dark_red"
            app:layout_constraintStart_toStartOf="@id/emailEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numberEditText"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorNr"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textSize="20dp"
            android:enabled="false"
            android:background="@color/colorPrimary"/>

</android.support.constraint.ConstraintLayout>